# snapr

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  act.mk  app.py  changelog.md  dev_env.yml  index.html  main.py  mkdocs.yml  mkdocs_macros.py  pyproject.toml  requirements.txt
.github/workflows/: changelog-prep.yml  changelog-process.yml  changelog-update.yml  changelog-version-prep.yml  code-quality.yml  deploy-all.yml  deploy-docker.yml  deploy-hf.yml  deploy-mkdocs.yml  deploy-release.yml  deploy-setup.yml  security.yml
CHANGELOG/: index.html
changelog/: index.html
docs/: 404.html  CHANGELOG.md  _version.md  changelog.md  index.html  index.md  sitemap.xml
docs/functional/: features.md  future-features.md  limitations.md  overview.md  ui.md  user-flow.md
docs/functional/features/: index.html
docs/functional/future-features/: index.html
docs/functional/limitations/: index.html
docs/functional/overview/: index.html
docs/functional/ui/: index.html
docs/functional/user-flow/: index.html
docs/overrides/: home.html  main.html
docs/search/: search_index.json
docs/styles/: colors.css
docs/technical/: agents.md  api.md  architecture.md  cicd.md  data.md  deployment.md  localdev.md  models.md  troubleshooting.md
functional/features/: index.html
functional/future-features/: index.html
functional/limitations/: index.html
functional/overview/: index.html
functional/ui/: index.html
functional/user-flow/: index.html
landing/: CNAME  index.html
notebooks/: 01_data_curation.ipynb  02_e5_xgboost.ipynb  03_ft_llama_qlora.ipynb  04_eval_llama_qlora.ipynb  05_ensemble_model.ipynb
notebooks/helpers/: items.py  loaders.py  testing.py
search/: search_index.json
src/agents/: base_agent.py  deal_scanner_agent.py  ensemble_price_agent.py  ft_price_agent.py  pipeline.py  planning_agent.py  rag_price_agent.py  xgb_price_agent.py
src/config/: constants.py  deploy.env  feeds.py  logging_queue.py
src/deals/: raw_deals.py  structured_deals.py
src/modal_services/: app_config.py  e5_model_base.py  ensemble_pricer.py  entry.py  ft_pricer.py  rag_pricer.py  xgb_pricer.py
src/models/: frontier_model.py
src/ui/: formatting.py  gradio_app.py
src/utils/: cleanup.py  file_io.py  logger.py  memory_utils.py  state_manager.py  text_utils.py
technical/agents/: index.html
technical/api/: index.html
technical/architecture/: index.html
technical/cicd/: index.html
technical/data/: index.html
technical/deployment/: index.html
technical/localdev/: index.html
technical/models/: index.html
technical/troubleshooting/: index.html
tests/: pytest.ini  test_deal_scanner_agent.py  test_ensemble_price_agent.py  test_ft_price_agent.py  test_pipeline.py  test_planning_agent.py  test_rag_price_agent.py  test_xgb_price_agent.py
(+10 files in other folders)
