[project]
name = "snapr"
version = "0.1.0"
description = "Multi-AI agent system trained to snap the best deals"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "gradio==5.29.1",
    "modal==0.74.20",
    "openai==1.65.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[dependency-groups]
docs = [
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.14",
]
notebook = [
    "datasets==2.21.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "transformers>=4.52.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.legacy",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F821"]

[tool.ruff.lint.per-file-ignores]
"src/agents/*.py" = ["ANN"]
"tests/*.py" = ["ANN"]
"notebooks/**/*" = ["ALL"]
"**/*.ipynb" = ["ALL"]
